# poem-sea-orm-name-conflict

./: Cargo.toml  README.md
migration/src/: lib.rs  m20240802_161049_create_team_table.rs
src/: main.rs
src/entities/: mod.rs  prelude.rs  team.rs  user.rs
